--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -8,6 +8,7 @@
     background-color: #fff;
     color: #ff6333;
     border: 1px solid #f90;
+    font: Misa Fonts Bold;
 }
 
 .btn-update-detail:hover {
