--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -132,9 +132,24 @@
     text-align: center;
     line-height: 32px;
     border-radius: 50%;
-    margin: 0;
+    margin: 0 !important;
     padding: 0;
     font-size: 11px;
     color: #fff;
     overflow: hidden;
+}
+
+.notifi-unread-count {
+    left: 15px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    position: absolute;
+    background-color: #ce0000;
+    top: -4px;
+    right: -4px;
+    color: #fff;
+    font-size: 10px;
+    line-height: 20px;
+    text-align: center;
 }
