--- a/src/css/components/addnew.css
+++ b/src/css/components/addnew.css
@@ -129,6 +129,7 @@ thead th {
     opacity: 1;
     height: calc(100vh - 155px);
     overflow: auto;
+    border: 1px solid #e7e8e9;
 }
 
 tr {
@@ -147,7 +148,8 @@ tr td:first-child {
 }
 
 table {
-    border: 1px solid #e7e8e9;
+    border-top: 1px solid #e7e8e9;
+    border-bottom: 1px solid #e7e8e9;
     border-collapse: collapse;
 }
 
@@ -189,4 +191,19 @@ tr:hover {
 
 .dx-texteditor.dx-state-focused.dx-editor-outlined {
     border-color: #02a3ec;
+}
+
+.msgVal {
+    display: none;
+    padding: 5px;
+    border-radius: 3px;
+    top: 25px;
+    cursor: pointer;
+    background-color: rgb(46, 43, 43);
+    color: white;
+    position: absolute;
+}
+
+.error:hover .msgVal {
+    display: block;
 }
