--- a/src/css/main.css
+++ b/src/css/main.css
@@ -85,6 +85,10 @@ body {
 
 .error {
     border-color: red !important;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .error:focus {
@@ -95,4 +99,8 @@ body {
     background: #fff;
     border: 1px solid red;
     border-radius: 4px;
+}
+
+tr td {
+    border-top: 1px solid #e7e8e9;
 }
